all in one第一版，未测试