@@ -1,22 +1,22 @@
 package fun.prof_chen.teamviewer.client;
 
 import fun.prof_chen.teamviewer.main_code.client.ClientApplication;
-import fun.prof_chen.teamviewer.main_code.client.sdk.ClientAdapterBundle;
-import fun.prof_chen.teamviewer.main_code.client.sdk.ClientAdapterFactory;
+import fun.prof_chen.teamviewer.main_code.client.sdk.AdapterRuntimeTck;
 import fun.prof_chen.teamviewer.main_code.client.sdk.AdapterTck;
 import fun.prof_chen.teamviewer.main_code.client.sdk.AdapterTckReport;
-import fun.prof_chen.teamviewer.main_code.client.sdk.AdapterRuntimeTck;
+import fun.prof_chen.teamviewer.main_code.client.sdk.ClientAdapterBundle;
+import fun.prof_chen.teamviewer.main_code.client.sdk.ClientAdapterFactory;
 import fun.prof_chen.teamviewer.main_code.config.ui.ConfigUiSessions;
 import net.fabricmc.api.ClientModInitializer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.ServiceLoader;
-import java.nio.file.Path;
 
-/** Shared Fabric bootstrap; Minecraft-version code contributes only a typed adapter factory. */
+/** Shared Java 17 Fabric bootstrap; Minecraft-version code contributes one typed adapter factory. */
 public final class TeamviewerClient implements ClientModInitializer {
     private static final Logger LOGGER = LoggerFactory.getLogger("team-view-relay");
     private ClientApplication<?, ?> application;
@@ -29,7 +29,7 @@ public final class TeamviewerClient implements ClientModInitializer {
         if (factories.size() != 1) {
             throw new IllegalStateException("Expected exactly one Minecraft adapter factory, found " + factories.size());
         }
-        application = start(factories.getFirst());
+        application = start(factories.get(0));
     }
 
     private static <W, H> ClientApplication<W, H> start(ClientAdapterFactory<W, H> factory) {
@@ -49,5 +49,4 @@ public final class TeamviewerClient implements ClientModInitializer {
         }
         return application;
     }
-
 }
